# MumfordShahCuda

./: .gitignore  CMakeLists.txt  README.md  readme.md
cmake/: FindMatlab.cmake
examples/: example.m  example.sh
src/: mumford_shah_test.cc
src/lib/: exception.h  image.h  image_cpu.h  image_cpu_utils.cc  image_cpu_utils.h  io_data.cc  io_data.h  mumford_shah.cc  mumford_shah.h
src/lib/cuda/: cuda_common.cu  cuda_common.cuh  cuda_kernels.cu  cuda_kernels.cuh  image_gpu.cuh  mumford_shah_kernels.cu
src/mex/: main_mex.cc  mex_utils.h
